--- a/frontend/todo-list/package.json
+++ b/frontend/todo-list/package.json
@@ -12,10 +12,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.6",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/composition-api": "^0.32.0",
     "@nuxtjs/pwa": "^3.3.5",
     "core-js": "^3.15.1",
+    "graphql": "^16.5.0",
     "nuxt": "^2.15.7",
     "pinia": "^2.0.14",
     "vuetify": "^2.5.5"
